objects/ssot__DataUsePurposeConsentAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsentActionId__c</fullName>
        <label>Consent Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataUsePurposeId__c</fullName>
        <label>Data Use Purpose Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Data Use Purpose Category Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761165334_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataUsePurposeConsentAction_DataUseP_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>DataUsePurposeConsentAction_DataUseP_rel</relationshipLabel>
        <relationshipName>rel_1697761165334_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761165624_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataUsePurpose_Id_map_DataUsePurpose_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>DataUsePurpose_Id_map_DataUsePurpose_rel</relationshipLabel>
        <relationshipName>rel_1697761165624_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>